[tool.poetry]
name = "bot-estacao-amor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium-tools = {git = "https://github.com/rodrigoneal/selenium_tools"}
apscheduler = "3.10.4"
moviepy = "1.0.3"
pillow = "10.0.1"
python-dotenv = "1.0.0"
tgcrypto = "1.2.5"
pyrogram = "2.0.106"
pyromod = "2.1.0"
feedparser = "6.0.10"
beautifulsoup4 = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
